--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
         <span>L</span>
         <span>O</span>
 		<span>A</span>
-        <span>Y</span>
-        <span>U</span>
         <span>S</span>
-        <span>A</span>
+        <span>H</span>
+        <span>E</span>
+        <span>L</span>
+	<span>L</span>
+	<span>Y</span>
 		<span>Y</span>
         <span>A</span>
         <span>N</span>
