--- a/index.html
+++ b/index.html
@@ -16,14 +16,17 @@
         <span>L</span>
         <span>L</span>
         <span>O</span>
-		<span>A</span>
+		
         <span>S</span>
         <span>H</span>
         <span>E</span>
         <span>L</span>
 	<span>L</span>
 	<span>Y</span>
-		<span>Y</span>
+
+	<span>S</span>
+        <span>A</span>
+	<span>Y</span>
         <span>A</span>
         <span>N</span>
         <span>G</span>
